# ML_ops_labs

./: .gitignore  .pre-commit-config.yaml
lab1/: .flake8  CHECKLIST.md  LICENSE  README.md  mypy.ini  requirements-dev.txt  setup.py
lab1/docs/: conf.py
lab1/scripts/: demo_script.py
lab1/src/mlops_lab1/: __init__.py  core.py
lab2/: .env.example  .gitignore  CHECKLIST.md  README.md  docker-compose.yml  pyproject.toml
lab2/data/raw/: iris.csv
lab2/scripts/: download_raw.py  process_data.py  run_pipeline.py  upload_processed.py  upload_raw.py
lab2/src/mlops_lab2/: __init__.py  cli.py  paths.py  pipeline.py  processing.py  s3_client.py  s3_io.py
lab3/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
lab3/configs/: experiment.yaml  grid.yaml
lab3/scripts/: run_experiments.py  run_in_container.sh  setup_env.sh  train_model.py  upload_processed.py
lab3/src/mlops_lab3/: __init__.py  cli.py  config.py  data.py  experiment.py  modeling.py  paths.py  s3_client.py  s3_io.py
lab4/: CHECKLIST.md  Dockerfile  README.md  pyproject.toml
lab4/models/: model.pkl
lab4/scripts/: load_test.py  train_model.py
lab4/src/mlops_lab4/: __init__.py  app.py  paths.py  predictor.py
