[tool.poetry]
name = "mlops-lab4"
version = "0.1.0"
description = "Lab 4: model serving and load testing"
authors = ["Danila Fedin"]
readme = "README.md"
packages = [{ include = "mlops_lab4", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = { version = "^0.27.1", extras = ["standard"] }
scikit-learn = "^1.4.0"
joblib = "^1.3.2"
pandas = "^2.2.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = "^1.8.0"

[tool.mypy]
strict = true
python_version = "3.10"
exclude = "(^|/)(__pycache__/|.venv/|venv/)"

[tool.flake8]
max-line-length = 99
per-file-ignores = ["__init__.py:F401"]
exclude = [".git", "__pycache__", ".venv", "venv", "build", "dist"]

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
